--- a/chat.html
+++ b/chat.html
@@ -118,7 +118,7 @@
 
   <div class="splash-screen" id="splash-screen">
     <img src="android-chrome-192x192.png" width="1%" alt="Logo da aplicação" />
-    <p>Connect team</p>
+    <p>Connect Team</p>
   </div>
   
 
